src/main/java/org/springframework/samples/petclinic/errors/RandomErrorThrower.java
package org.springframework.samples.petclinic.errors;

public class RandomErrorThrower {

	// Custom exception classes
	static class CustomException1 extends Exception {
	}

	static class CustomException2 extends Exception {
	}

	static class CustomException3 extends Exception {
	}

	static class CustomException4 extends Exception {
	}

	static class CustomException5 extends Exception {
	}

	static class CustomException6 extends Exception {
	}

	static class CustomException7 extends Exception {
	}

	static class CustomException8 extends Exception {
	}

	static class CustomException9 extends Exception {
	}

	static class CustomException10 extends Exception {
	}

	static class CustomException11 extends Exception {
	}

	static class CustomException12 extends Exception {
	}

	static class CustomException13 extends Exception {
	}

	static class CustomException14 extends Exception {
	}

	static class CustomException15 extends Exception {
	}

	static class CustomException16 extends Exception {
	}

	static class CustomException17 extends Exception {
	}

	static class CustomException18 extends Exception {
	}

	static class CustomException19 extends Exception {
	}

	static class CustomException20 extends Exception {
	}

	public static void throwError(int errorType) throws Exception {
		switch (errorType) {
			case 0:
				throw new CustomException1();
			case 1:
				throw new CustomException2();
			case 2:
				throw new CustomException3();
			case 3:
				throw new CustomException4();
			case 4:
				throw new CustomException5();
			case 5:
				throw new CustomException6();
			case 6:
				throw new CustomException7();
			case 7:
				throw new CustomException8();
			case 8:
				throw new CustomException9();
			case 9:
				throw new CustomException10();
			case 10:
				throw new CustomException11();
			case 11:
				throw new CustomException12();
			case 12:
				throw new CustomException13();
			case 13:
				throw new CustomException14();
			case 14:
				throw new CustomException15();
			case 15:
				throw new CustomException16();
			case 16:
				throw new CustomException17();
			case 17:
				throw new CustomException18();
			case 18:
				throw new CustomException19();
			case 19:
				throw new CustomException20();
			default:
				throw new Exception("Unexpected error type");
		}
	}
}
